crates/swc_ecma_parser/tests/test262-error-references/fail/455c19cd6608ab5d.module.js.stderr
error: Unexpected token `}`. Expected identifier or string
 --> $DIR/tests/test262-parser/fail/455c19cd6608ab5d.module.js:1:13
  |
1 | export {a as} from a
  |             ^

